{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 39,
  "lineage": "adf08229-bf1f-1a7a-504c-f58d8a0bb2fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:internet-gateway/igw-0c871bdd29ce136d1",
            "id": "igw-0c871bdd29ce136d1",
            "owner_id": "707904393742",
            "tags": {
              "Name": "jaks-internet-gateway"
            },
            "tags_all": {
              "Name": "jaks-internet-gateway"
            },
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:route-table/rtb-0efe103cb77125ab1",
            "id": "rtb-0efe103cb77125ab1",
            "owner_id": "707904393742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c871bdd29ce136d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route0"
            },
            "tags_all": {
              "Name": "route0"
            },
            "timeouts": null,
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:route-table/rtb-02788b5e9df7959a7",
            "id": "rtb-02788b5e9df7959a7",
            "owner_id": "707904393742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c871bdd29ce136d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route1"
            },
            "tags_all": {
              "Name": "route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:route-table/rtb-0aab68910f51b97e6",
            "id": "rtb-0aab68910f51b97e6",
            "owner_id": "707904393742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c871bdd29ce136d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route2"
            },
            "tags_all": {
              "Name": "route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:route-table/rtb-08f16fc83990dc35b",
            "id": "rtb-08f16fc83990dc35b",
            "owner_id": "707904393742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c871bdd29ce136d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routemanually"
            },
            "tags_all": {
              "Name": "routemanually"
            },
            "timeouts": null,
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03268822b91533c9b",
            "route_table_id": "rtb-0efe103cb77125ab1",
            "subnet_id": "subnet-0dcd401b49fb11d17"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06684cec7f0eabc27",
            "route_table_id": "rtb-02788b5e9df7959a7",
            "subnet_id": "subnet-025560fdb196a3e5c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a9f9ed34a52962",
            "route_table_id": "rtb-0aab68910f51b97e6",
            "subnet_id": "subnet-04db6f0b38f7dbe69"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.pub1",
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:subnet/subnet-0dcd401b49fb11d17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcd401b49fb11d17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707904393742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet0"
            },
            "tags_all": {
              "Name": "Pub-subnet0"
            },
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:subnet/subnet-025560fdb196a3e5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025560fdb196a3e5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707904393742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet1"
            },
            "tags_all": {
              "Name": "Pub-subnet1"
            },
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:subnet/subnet-04db6f0b38f7dbe69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db6f0b38f7dbe69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707904393742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-subnet2"
            },
            "tags_all": {
              "Name": "Pub-subnet2"
            },
            "vpc_id": "vpc-084323e31fa30dd29"
          },
          "dependencies": [
            "aws_vpc.jeks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jeks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:707904393742:vpc/vpc-084323e31fa30dd29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-023b2710dc54b33f5",
            "default_route_table_id": "rtb-06a19b52282a0b4a7",
            "default_security_group_id": "sg-00c93e66ab86350f5",
            "dhcp_options_id": "dopt-08dd9b7b0559b356c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084323e31fa30dd29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a19b52282a0b4a7",
            "owner_id": "707904393742",
            "tags": {
              "Name": "Jaks-vpc"
            },
            "tags_all": {
              "Name": "Jaks-vpc"
            }
          }
        }
      ]
    }
  ]
}